nodes fixed: they now overlap adjacent elements

--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,9 @@ li {
     border-color: #83baf3;
     border-radius:  15px 0;
     border-width: 3px;
+    position: relative;
+    left:3px;
+    margin-left: -3px;
 }
 .connector-right{
     width:3%;
@@ -122,6 +125,7 @@ li {
      background-color: #83baf3;
      position: relative;
      top:-75px;
+     margin-right: -6px;
  }
  .dot-left {
     height:10px;
@@ -132,6 +136,7 @@ li {
     position: relative;
     top:85px;
     border-style: solid;
+    margin-left: -7px;
     
 }
 
